# devflow-studio

./: .gitignore  README.md  SUMMARY.md  USER_GUIDE.md  package-lock.json  package.json  playwright.config.ts  release.config.js  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: detector.rs  executor.rs  folders.rs  mod.rs  secure_storage.rs
apps/ui/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/ui/src/: App.tsx  index.css
apps/ui/src/canvas/: FlowCanvas.tsx  NodeSettingsPanel.tsx  Toolbar.tsx
apps/ui/src/components/: AnalyticsPanel.tsx  CIExportModal.tsx  DryRunPanel.tsx  ErrorBoundary.tsx  ExecutionInspector.tsx  FlowDebuggerPanel.tsx  FlowVersionPanel.tsx  HistoryModal.tsx  LogStream.tsx  OptimizerPanel.tsx  SafetyModal.tsx  SecretsPanel.tsx  TemplateModal.tsx  TimelinePanel.tsx  UpdateChecker.tsx
apps/ui/src/hooks/: useAutosave.ts  useFlowExecution.ts  useFlowExecution.tsx
apps/ui/src/lib/: SafeExecutor.ts  ciExporters.ts  db.ts  dryRunEngine.ts  errorTypes.ts  metricService.ts  nodeRegistry.ts  types.ts  (+9 more)
core/analytics/src/: tracker.ts
core/detectors/: package.json
core/detectors/src/: index.ts  suggestionEngine.ts  templates.ts
core/executor/: package.json
core/executor/src/: index.ts  shellAbstraction.ts  types.ts
core/flow-engine/: package.json
core/flow-engine/src/: index.ts  nodeRegistry.ts  planner.ts  pluginLoader.ts  serializer.ts  types.ts  validator.ts
core/optimizer/src/: engine.ts
tests/e2e/: canvas.spec.ts
(+10 files in other folders)
