[package]
name = "devflow-studio"
version = "0.1.0"
description = "DevFlow Studio — Cross-Platform Visual DevOps Workflow Builder"
authors = ["DevFlow Studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "devflow_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
