[package]
name = "devflow-studio"
version = "1.1.1"
description = "DevFlow Studio — Cross-Platform Visual DevOps Workflow Builder"
authors = ["DevFlow Studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "devflow_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
keyring = "2"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tauri-plugin-updater = "2.10.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
